--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "price-checker-item",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,20 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-clipboard/clipboard": "^1.14.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.14",
     "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.11",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "expo-camera": "~15.0.11"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
