--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
       "permissions": [
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO"
-      ]
+      ],
+      "package": "com.kymrhys.pricecheckeritem"
     },
     "web": {
       "favicon": "./assets/favicon.png"
